<resources>
    <string name="app_name">Temp Monitor</string>
    <string name="topic">Temperature Monitoring of the Espace Fauriel building</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
</resources>
